--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,11 @@
-azure-common==1.1.28
-azure-core==1.27.1
-azure-identity==1.13.0
-azure-mgmt-compute==30.0.0
-azure-mgmt-core==1.4.0
-azure-mgmt-resource==23.0.1
-azure-mgmt-storage==21.0.0
-Babel==2.12.1
-blinker==1.6.2
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-cryptography==41.0.1
-Flask==2.3.2
-flask-babel==3.1.0
-Flask-Table==0.5.0
-idna==3.4
-importlib-metadata==6.7.0
-isodate==0.6.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-msal==1.22.0
-msal-extensions==1.0.0
-msrest==0.7.1
-oauthlib==3.2.2
-portalocker==2.7.0
-pycparser==2.21
-PyJWT==2.7.0
-pytz==2023.3
-pywin32==306
-requests==2.31.0
-requests-oauthlib==1.3.1
-six==1.16.0
-tabulate==0.9.0
-typing_extensions==4.6.3
-urllib3==2.0.3
-Werkzeug==2.3.6
-WTForms==3.0.1
-zipp==3.15.0
+azure-common
+azure-core
+azure-identity
+azure-mgmt-compute
+azure-mgmt-core
+azure-mgmt-resource
+azure-mgmt-storage
+Flask
+flask-babel
+Flask-Table
+requests
